# tailor-meta

./: Jenkinsfile  README.md  setup.cfg  techstack.md  techstack.yml
environment/: Dockerfile
jobs/: tailorTestJob.groovy  tailorTestPipeline.groovy
src/io/locusbots/: Utils.groovy
tailor-meta/: Jenkinsfile.j2  create_pipelines.py
tailor_meta/: Jenkinsfile.j2  __init__.py  blossom.py  create_pipelines.py  update_repo_settings.py
tailor_meta/debian_bootstrap_templates/: control.j2  rules.j2
tailor_meta/debian_templates/: control.j2  rules.j2
vars/: cancelPreviousBuilds.groovy  checkoutPR.groovy  cleanDocker.groovy  createPackageJob.groovy  generateJobsFromYaml.groovy  perPackageBuild.groovy  tailorDistroPipeline.groovy  tailorTestPipeline.groovy
