[metadata]
name = tailor-meta
version = attr: tailor_meta.__version__
url = http://tailor.locusbots.io
project_urls =
    GitHub = https://github.com/locusrobotics/tailor-meta
author = Paul Bovbel
author_email = pbovbel@locusrobotics.com
maintainer = Paul Bovbel
maintainer_email = pbovbel@locusrobotics.com
license = Proprietary
description = Configure test and PR jobs for a ROS distro.
long_description = file: README.md

[options]
python_requires = >=3.8
install_requires =
    Click ==8.1.3
    Jinja2 ==3.1.2
    rosdistro ==0.9.0
    PyGithub ==2.6.1
    PyYaml ==6.0
packages =find:
setup_requires =
    pytest-runner ==5.1
tests_require =
    pytest ==5.1.3
    pytest-mypy ==0.4.1
    pytest-flake8 ==1.0.4

[options.entry_points]
console_scripts =
    create_pipelines = tailor_meta.create_pipelines:main
    update_repo_settings = tailor_meta.update_repo_settings:main

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose --junitxml=test-results.xml --mypy --flake8
pep8maxlinelength = 120

[flake8]
max-line-length = 120
