[metadata]
name = tailor-meta
version = attr: tailor_meta.__version__
url = http://tailor.locusbots.io
project_urls =
    GitHub = https://github.com/locusrobotics/tailor-meta
author = Paul Bovbel
author_email = pbovbel@locusrobotics.com
maintainer = Paul Bovbel
maintainer_email = pbovbel@locusrobotics.com
license = Proprietary
description = Configure test and PR jobs for a ROS distro.
long_description = file: README.md

[options]
python_requires = >=3.12
install_requires =
    Click ==8.2.1
    Jinja2 ==3.1.6
    PyGithub ==2.8.1
    PyYaml ==6.0.2
    rosdistro ==1.0.1
packages =find:
setup_requires =
    pytest-runner ==6.0.1
tests_require =
    pytest ==8.4.1
    pytest-mypy ==1.0.1
    pytest-flake8 ==1.3.0

[options.entry_points]
console_scripts =
    create_pipelines = tailor_meta.create_pipelines:main
    update_repo_settings = tailor_meta.update_repo_settings:main

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose --junitxml=test-results.xml --mypy --flake8
pep8maxlinelength = 120

[flake8]
max-line-length = 120
